# haruna

./: .gitignore  CMakeLists.txt  README.md  common.props  gl.props  gtest.props  haruna.sln  haruna.vcxproj  haruna.vcxproj.filters  haruna_exe.vcxproj  haruna_exe.vcxproj.filters  haruna_test.vcxproj  haruna_test.vcxproj.filters  stdafx.h  zlib.props
assets/: basic_light.rfx  color_shader.rfx  diffuse_specular_map.rfx  normal_map.rfx  simple_tex.rfx
assets/shader/: basic_light.fs  color.fs  color.vs  color_shader.fs  const_color.vs  diffuse_specular_map.fs  environment_mapping.fs  normal_mapping.fs  shadow_map.fs  simple_red.vs  simple_tex.fs  text.fs  text.vs  uv_animation.fs
haruna/: debug_draw_manager.cpp  debug_draw_manager.h  haruna.vcxproj  haruna.vcxproj.filters  main.cpp  material.cpp  material.h  parametric_surface.cpp  primitive_mesh.cpp  primitive_mesh.h  render_device.cpp  render_device.h  scene.cpp  scene.h  shader.h  stdafx.h  vertex.h
haruna/gl/: debug_draw.cpp  debug_draw.h  gl_env.h  gl_renderer.cpp  gl_renderer.h  render_state.cpp  render_state.h  shader.cpp  shader.h  sys_font.cpp  sys_font.h  texture.cpp  texture.h
haruna_exe/: color_conversion.cpp  color_conversion.h  color_shader.cpp  color_shader.h  demo.cpp  demo.h  diffuse_specular_mapping.cpp  diffuse_specular_mapping.h  edge_detection.cpp  environment_mapping.cpp  exe_stdafx.cpp  exe_stdafx.h  lighting.cpp  lighting.h  main.cpp  normal_mapping.cpp  normal_mapping.h  renderer.cpp  renderer.h  shadow_mapping.cpp  texture_mapping.cpp  texture_mapping.h  toon_shader.cpp  toon_shader.h  uv_animation.cpp
haruna_test/: low_level_c_file_test.cpp  test_main.cpp  test_stdafx.h
haruna_test/haruna/: debug_draw_manager_test.cpp  scene_test.cpp
haruna_test/haruna/gl/: buffer_object_test.cpp
haruna_test/sora/: filesystem_test.cpp  heap_test.cpp  ini_reader_test.cpp  low_level_c_file_test.cpp  mem_test.cpp  stack_allocator_test.cpp  string_hash_test.cpp  string_util_test.cpp
haruna_test/sora/io/: file_test.cpp  filesystem_test.cpp  low_level_c_file_test.cpp  zip_helper_test.cpp
minizip/: ioapi.cpp  iowin32.cpp  mztools.cpp  unzip.cpp  zip.cpp
soil/: SOIL.cpp  image_DXT.cpp  image_helper.cpp  stb_image_aug.cpp
sora/: assert_inc.h  filesystem.cpp  filesystem.h  heap.cpp  heap.h  ini.cpp  ini.h  ini_reader.cpp  ini_reader.h  logger.cpp  logger.h  math_helper.cpp  math_helper.h  mem.cpp  mem.h  stack_allocator.cpp  stack_allocator.h  string_hash.cpp  string_hash.h  string_util.cpp  string_util.h
sora/io/: file.cpp  file.h  filesystem.cpp  filesystem.h  low_level_c_file.cpp  low_level_c_file.h  memory_file.cpp  memory_file.h  zip_helper.cpp  zip_helper.h
